--- a/scripts/ci3/.gitlab-ci.yml
+++ b/scripts/ci3/.gitlab-ci.yml
@@ -1,31 +1,31 @@
 
   variables:
-    REGISTRY: "192.168.10.67"
-    USER: "admin"
-    PASS: "P8jF3sH6vQ1yL5nT"
+    REPO_HARBOR: "192.168.10.67"
+    REPO_HARBOR_USER: "admin"
+    REPO_HARBOR_PASS: "P8jF3sH6vQ1yL5nT"
+    REPO_PATH: "egame"
+    REPO_PROJECT: "egame-grpc03"
+    IMAGE_VERSION: "local-dev-v0.0.1"
     DEPLOY_HOST: "192.168.10.87"
     DEPLOY_USER: "dzz"
     DEPLOY_PASSWORD: "Dzz12345!@#"
-    IMAGE_VERSION: "local-dev-v0.0.1"
 
   stages:
     - build
     - deploy
-
+  #镜像完整路径: 192.168.10.67/egame/egame-grpc03:local-dev-v0.0.1
   # ---------- Build 模板 ----------
   .build_template: &build_template
     stage: build
-    image: 192.168.10.67/egame/ci-tools:go1.24.5-podman
+    image: $REPO_HARBOR/$REPO_PATH/ci-tools:go1.24.5-podman
     script:
       - echo "🔨 构建 $APP_BINARY"
       - export STORAGE_DRIVER=vfs
       - CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o $APP_BINARY .
-      - echo "📦 确保配置文件存在"
-      - ls -la conf/
-      - echo "📦 构建镜像 $APP_IMAGE:$IMAGE_VERSION"
-      - podman login --tls-verify=false -u "$USER" -p "$PASS" $REGISTRY
-      - podman build --tls-verify=false -t $REGISTRY/$APP_IMAGE:$IMAGE_VERSION .
-      - podman push --tls-verify=false $REGISTRY/$APP_IMAGE:$IMAGE_VERSION
+      - echo "📦 构建镜像 $REPO_HARBOR/$REPO_PATH/$REPO_PROJECT:$IMAGE_VERSION"
+      - podman login --tls-verify=false -u "$REPO_HARBOR_USER" -p "$REPO_HARBOR_PASS" $REPO_HARBOR
+      - podman build --tls-verify=false -t $REPO_HARBOR/$REPO_PATH/$REPO_PROJECT:$IMAGE_VERSION .
+      - podman push --tls-verify=false $REPO_HARBOR/$REPO_PATH/$REPO_PROJECT:$IMAGE_VERSION
       - rm -f $APP_BINARY
     only:
       - dzz/local-dev
@@ -33,7 +33,7 @@
   # ---------- Deploy 模板 ----------
   .deploy_template: &deploy_template
     stage: deploy
-    image: 192.168.10.67/egame/ci-tools:go1.24.5-podman
+    image: $REPO_HARBOR/$REPO_PATH/ci-tools:go1.24.5-podman
     before_script:
       - apk add --no-cache openssh-client sshpass
     script:
@@ -45,9 +45,9 @@
           if [ ! -f $APP_PATH/conf/config_local.yaml ]; then
             echo '配置文件 config_local.yaml 不存在，从镜像中提取...'
             # 拉取最新的镜像
-            echo '$DEPLOY_PASSWORD' | sudo -S docker pull $REGISTRY/$APP_IMAGE:$IMAGE_VERSION &&
+            echo '$DEPLOY_PASSWORD' | sudo -S docker pull $REPO_HARBOR/$REPO_PATH/$REPO_PROJECT:$IMAGE_VERSION &&
             # 临时运行容器并复制配置文件
-            TEMP_CONTAINER=\$(sudo docker create $REGISTRY/$APP_IMAGE:$IMAGE_VERSION) &&
+            TEMP_CONTAINER=\$(sudo docker create $REPO_HARBOR/$REPO_PATH/$REPO_PROJECT:$IMAGE_VERSION) &&
             sudo docker cp \$TEMP_CONTAINER:/app/conf/config_local.yaml $APP_PATH/conf/config_local.yaml &&
             sudo docker rm -v \$TEMP_CONTAINER > /dev/null 2>&1
             echo '已从镜像中提取 config_local.yaml'
@@ -60,15 +60,15 @@
             if [ -n \"\$TEMP_CONTAINER\" ] && [ \"\$(sudo docker ps -aq -f id=\$TEMP_CONTAINER 2>/dev/null)\" ]; then
               sudo docker cp \$TEMP_CONTAINER:/app/conf/config.yaml $APP_PATH/conf/config.yaml 2>/dev/null || echo '{}' > $APP_PATH/conf/config.yaml
             else
-              TEMP_CONTAINER_NEW=\$(sudo docker create $REGISTRY/$APP_IMAGE:$IMAGE_VERSION) &&
+              TEMP_CONTAINER_NEW=\$(sudo docker create $REPO_HARBOR/$REPO_PATH/$REPO_PROJECT:$IMAGE_VERSION) &&
               sudo docker cp \$TEMP_CONTAINER_NEW:/app/conf/config.yaml $APP_PATH/conf/config.yaml &&
               sudo docker rm -v \$TEMP_CONTAINER_NEW > /dev/null 2>&1 || echo '{}' > $APP_PATH/conf/config.yaml
             fi
           fi &&
         
           # 登录 Harbor 并拉取镜像
-          echo '$DEPLOY_PASSWORD' | sudo -S docker login --username $USER --password-stdin $REGISTRY <<< '$PASS' &&
-          echo '$DEPLOY_PASSWORD' | sudo -S docker pull $REGISTRY/$APP_IMAGE:$IMAGE_VERSION &&
+          echo '$DEPLOY_PASSWORD' | sudo -S docker login --username $REPO_HARBOR_USER --password-stdin $REPO_HARBOR <<< '$REPO_HARBOR_PASS' &&
+          echo '$DEPLOY_PASSWORD' | sudo -S docker pull $REPO_HARBOR/$REPO_PATH/$REPO_PROJECT:$IMAGE_VERSION &&
         
           # 停止并删除旧容器
           echo '$DEPLOY_PASSWORD' | sudo -S docker stop $CONTAINER_NAME 2>/dev/null || true &&
@@ -77,7 +77,7 @@
           # 启动新容器
           echo '$DEPLOY_PASSWORD' | sudo -S docker run -d --name $CONTAINER_NAME --restart=unless-stopped \
           -p $HOST_PORT:$CONTAINER_PORT -v $APP_PATH/conf:/app/conf -v $APP_PATH/logs:/app/logs \
-          $REGISTRY/$APP_IMAGE:$IMAGE_VERSION &&
+          $REPO_HARBOR/$REPO_PATH/$REPO_PROJECT:$IMAGE_VERSION &&
         
           # 检查状态
           echo '$DEPLOY_PASSWORD' | sudo -S docker ps -a --filter name=$CONTAINER_NAME &&
@@ -93,13 +93,11 @@
     <<: *build_template
     variables:
       APP_BINARY: "egame-grpc03.bin"
-      APP_IMAGE: "egame/egame-grpc03"
       PORT: "8889"
   deploy-grpc03:
     <<: *deploy_template
     variables:
       APP_BINARY: "egame-grpc03.bin"
-      APP_IMAGE: "egame/egame-grpc03"
       CONTAINER_NAME: "egame-grpc03-dev"
       HOST_PORT: "8889"
       CONTAINER_PORT: "8889"
